crates/solidity-v2/testing/snapshots/diagnostics_output/structure/constructor_in_interface/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

[TypeError 4726] Error: Functions in interfaces cannot have an implementation.
   ╭─[input.sol:9:5]
   │
 9 │     constructor() {}
   │     ────────┬───────  
   │             ╰───────── Error occurred here.
───╯

[TypeError 6482] Error: Constructor cannot be defined in interfaces.
   ╭─[input.sol:9:5]
   │
 9 │     constructor() {}
   │     ────────┬───────  
   │             ╰───────── Error occurred here.
───╯
